config for deploy
